Made website more like original website

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: pygments
 #
 title : Hans Alan Whitburn Haugen's personal website
 tagline: Alan's website
-author :
+author : Alan Whitburn Haugen
   name : Alan Haugen
   email : alanhaugen@gmail.com
   github : alanhaugen
