Changed config a little

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Hans Alan Whitburn Haugen's personal website
-tagline: Alan's website
+title : Hans Alan Whitburn Haugen
+tagline: personal website
 author : Alan Whitburn Haugen
   name : Alan Haugen
   email : alanhaugen@gmail.com
