changed to hacker theme

--- a/_config.yml
+++ b/_config.yml
@@ -132,5 +132,7 @@ JB :
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
   
-theme: jekyll-skeleton
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
